# libtuxnbits

./: CMakeLists.txt  LICENSE  README.md  bits.cmake  bitstest.cmake  io.cmake  tui.cmake
bitstest.app/: main.cc
resources/: diagnostic.sql
tuxnbits++/bits/: appbits.cc  appbits.h  cadres.cc  cadres.h  cmdargs.cc  cmdargs.h  colors.cc  colors.h  diagnostic.cc  diagnostic.h  diagnostic.inc  expect.h  expect.inc  export.h  geometry.cc  geometry.h  glyphes.cc  glyphes.h  notify.h  object.cc  object.h  rem.cc  rem.h  string.cc  string.h
tuxnbits++/bits/databits/: databits.cc  databits.h  field.cc  field.h  table.cc  table.h
tuxnbits++/io/: export.h  kbhit.cc  kbhit.h  lfd.cc  lfd.h  listener.cc  listener.h  mouse.cc  mouse.h  tcp_socket.cc  tcp_socket.h  terminal.cc  terminal.h  vchar.bloc.cc  vchar.cc  vchar.h
tuxnbits++/tui/: application.cc  application.h  event.cc  event.h  event.inline  export.h  pencil.cc  pencil.h  tuins.cc  tuins.h
tuxnbits++/tui/twidgets/: twidget.cc  twidget.h
